<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/page_view_1"
    >

    <RelativeLayout
        android:layout_width="1000dp"
        android:layout_height="600dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/blue"
        android:layout_marginRight="50dp"
        >

        <LinearLayout
            android:id="@+id/first_product_name_rl"
            android:layout_width="800dp"
            android:layout_height="300dp"
            android:background="@drawable/white_dashed"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            >

            <TextView
                android:id="@+id/first_product_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginLeft="60dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                />
            <EditText
                android:id="@+id/first_product_name_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="250dp"
                android:minHeight="50dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:textColor="#3d3d3d"
                android:textSize="24sp"
                android:text=""
                />
        </LinearLayout>


        <TextView
            android:id="@+id/first_detail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_detail"
            android:textColor="@color/white"
            android:layout_below="@+id/first_product_name_rl"
            android:textSize="24sp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="50dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/first_detail_tv"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#BD8F60"
                android:text="@string/product_1"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:padding="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#2Eb6A6"
                android:text="@string/product_2"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:padding="5dp"
                android:layout_marginLeft="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#A62E6F"
                android:text="@string/product_3"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:padding="5dp"
                android:layout_marginLeft="15dp"
                />


        </LinearLayout>


        <TextView
            android:id="@+id/first_next_btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/next_step_bg"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:padding="15sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="85dp"
            android:layout_marginRight="15dp"
            />

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/robot"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-330dp"
        />

</RelativeLayout>