<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/page_view_3"
    android:visibility="gone"
    >

    <RelativeLayout
        android:layout_width="1000dp"
        android:layout_height="600dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/blue"
        android:layout_marginRight="50dp"
        >

        <RelativeLayout
            android:id="@+id/first_activity_name_rl"
            android:layout_width="800dp"
            android:layout_height="300dp"
            android:background="@drawable/white_dashed"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            >

            <TextView
                android:id="@+id/first_product_activity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_text"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="30dp"
                />
            <EditText
                android:id="@+id/first_product_detail_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/first_product_activity_tv"
                android:background="@color/white"
                android:padding="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:textColor="@color/black"
                />
        </RelativeLayout>


        <TextView
            android:id="@+id/first_activity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_text1"
            android:textColor="@color/white"
            android:layout_below="@+id/first_activity_name_rl"
            android:textSize="24sp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="50dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/first_activity_tv"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#A230cc"
                android:text="@string/activity1"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:padding="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#848A73"
                android:text="@string/activity2"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:padding="5dp"
                />


        </LinearLayout>


        <TextView
            android:id="@+id/first_next_btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/next_step_bg"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:padding="15sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="85dp"
            android:layout_marginRight="15dp"
            />

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/robot"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-330dp"
        />

</RelativeLayout>