<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="@dimen/padding_0"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:textColor="@color/white"
            android:id="@+id/musicPull"
            android:layout_width="@dimen/padding_150"
            android:layout_height="wrap_content"
            android:layout_above="@+id/musicName"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_item_bg"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="@dimen/padding_15"
            android:singleLine="true"
            android:text="上传音乐"
            android:textSize="@dimen/textsize_20" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/musicName"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imagePull"
            android:layout_alignLeft="@+id/musicPull"
            android:layout_marginTop="@dimen/padding"
            android:padding="@dimen/padding_15"
            android:singleLine="true"
            android:textSize="@dimen/textsize_20" />

        <ImageView
            android:id="@+id/deleteMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/musicName"
            android:layout_toRightOf="@+id/musicName"
            android:padding="@dimen/padding_15"
            android:src="@mipmap/delect_media"
            android:visibility="invisible" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/imagePull"
            android:layout_width="@dimen/padding_150"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/custom_item_bg"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="@dimen/padding_15"
            android:singleLine="true"
            android:text="上传图片"
            android:textSize="@dimen/textsize_20" />

        <TextView
            android:id="@+id/imageName"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imagePull"
            android:layout_below="@+id/imagePull"
            android:layout_marginTop="@dimen/padding"
            android:padding="@dimen/padding_15"
            android:singleLine="true"
            android:textSize="@dimen/textsize_20" />

        <ImageView
            android:id="@+id/deleteImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageName"
            android:layout_toRightOf="@+id/imageName"
            android:padding="@dimen/padding_15"
            android:src="@mipmap/delect_media"
            android:visibility="invisible" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/videoPull"
            android:layout_width="@dimen/padding_150"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageName"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/custom_item_bg"
            android:gravity="center"
            android:padding="@dimen/padding_15"
            android:text="上传视频"
            android:textSize="@dimen/textsize_20" />

        <TextView
            android:id="@+id/videoName"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageName"
            android:layout_below="@+id/videoPull"
            android:layout_marginTop="@dimen/padding"
            android:padding="@dimen/padding_15"
            android:singleLine="true"
            android:textSize="@dimen/textsize_20" />

        <ImageView
            android:id="@+id/deleteVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/videoName"
            android:layout_toRightOf="@+id/videoName"
            android:padding="@dimen/padding_15"
            android:src="@mipmap/delect_media"
            android:visibility="invisible" />
        <!-- <ImageView
             android:id="@+id/ivPhoto"
             android:layout_width="@dimen/padding_300"
             android:layout_height="@dimen/padding_300"
             android:layout_marginBottom="@dimen/padding"
             android:layout_marginTop="@dimen/padding_20"
             android:background="@mipmap/tupainjiazai" />-->

    </RelativeLayout>

    <LinearLayout
        android:layout_width="@dimen/padding_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_35"
        android:paddingRight="@dimen/padding_50">

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="说明:"
            android:textSize="@dimen/textsize_26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/padding"
            android:lineSpacingExtra="@dimen/padding_5"
            android:text="@string/addmedia"
            android:textSize="@dimen/textsize_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:lineSpacingExtra="@dimen/padding_5"
            android:textColor="@color/white"
            android:text="@string/addmedia2"
            android:textSize="@dimen/textsize_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/padding"
            android:lineSpacingExtra="@dimen/padding_5"
            android:text="@string/addmedia3"
            android:textSize="@dimen/textsize_20" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:lineSpacingExtra="@dimen/padding_5"
            android:text="@string/addmedia4"
            android:textSize="@dimen/textsize_20" />
    </LinearLayout>
</LinearLayout>